--- a/handoff/handoff.yml
+++ b/handoff/handoff.yml
@@ -1,41 +1,37 @@
-# Handoff Record (v1.0) — aaf2resolve-spec
-# Tracks the current baton across CL → GPT → CO
-
-owner: "CL"                     # CL | GPT | CO
-status: "in_progress"           # in_progress | needs_review | blocked | completed
+# handoff/handoff.yml
+version: 1.0
+owner: "CL"            # current baton holder: CL | GPT | CO
+status: "ready"        # ready | in_progress | needs_review | blocked | completed
 
 artifacts:
   - path: "src/validate_canonical.py"
     revision: "1.001"
     last_editor: "CL"
-    handoff_notes: >
-      Validator draft is complete through schema + reason-code mapping and CLI.
-      Additional custom validations are stubbed; expand as needed. Ready for GPT to
-      sandbox-run against example JSONs and produce reports.
+    handoff_notes: |
+      Complete through schema + reason code mapping. 
+      GPT: run validator locally & in CI; generate sample reports; raise issues for any spec gaps.
+    spec_compliance:
+      - "docs/data_model_json.md §Top-level, §Event, §Source, §Effect"
+      - "docs/inspector_rule_pack.md §Parameter & keyframe capture"
 
 outputs_expected:
-  - "reports/validation_report.json"
-  - "reports/schema_compliance.md"
+  - "reports/validation/minimal_example.json"
+  - "reports/validation/failing_examples.json"
+  - "reports/summary/schema_compliance.md"
 
 acceptance_criteria:
-  - "Minimal valid example passes (docs/data_model_json.md)"
-  - "Invalid samples trigger appropriate reason codes"
-  - "CLI exit codes behave as specified (0/1/2)"
-  - "Report written to --report when provided"
+  - "Minimal example passes validator with 0 errors"
+  - "Known-bad samples trigger expected reason codes"
+  - "CI ‘Python setup and validation’ workflow passes on main"
 
-next_action: "GPT: sandbox-execute validator on sample JSONs and attach reports"
-
+next_action: "GPT: run validator on test samples and commit JSON reports under /reports/validation/"
+ci:
+  budget:
+    calls_per_day: 1000
+    tokens_per_day: 100000
+  fail_safes:
+    on_budget_exceeded: "handoff owner → GPT; set status=blocked; open issue"
 metadata:
-  spec_compliance:
-    - "docs/data_model_json.md §Top-level structure"
-    - "docs/data_model_json.md §Event"
-    - "docs/data_model_json.md §Source"
-    - "docs/data_model_json.md §Effect"
-  handoff_ready: true
-  integration_points:
-    - "validate_canonical_json()"
-    - "load_and_validate_json_file()"
-    - "CLI main()"
-  notes: >
-    After GPT runs sandbox tests and attaches reports, set status=needs_review
-    and pass baton to CO for refactor/packaging into /src/validators/.
+  created_at: "2025-08-29T00:00:00Z"
+  last_updated_by: "OD"
+  notes: "Baton file is the single source of truth for agent orchestration."
