--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,12 @@
-[project]
-name = "aaf-to-resolve-fcpxml"
-version = "0.1.0"
-description = "CLI tools to convert AAF to FCPXML 1.13 for Resolve, via canonical JSON and SQLite"
-authors = [{ name = "odgriff79" }]
-readme = "README.md"
-requires-python = ">=3.10"
-dependencies = [
-    "pyaaf2"
-]
+[tool.ruff]
+line-length = 100
+target-version = "py311"
 
-[tool.setuptools]
-packages = ["src", "src.tools"]
+[tool.mypy]
+python_version = "3.11"
+strict = true
+ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = ["tests"]
