Enhance CI workflow with type checks and tests
Updated CI workflow to include type checking and unit tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -14,24 +15,38 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Install dev deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install black ruff
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          pip install black ruff mypy pytest PyYAML
 
-      - name: Lint & format (ruff + black --check)
+      - name: Lint (ruff) & format check (black)
         run: |
           ruff check .
           black --check .
 
+      - name: Type check (mypy)
+        run: mypy .
+
+      - name: Unit tests (pytest)
+        run: |
+          mkdir -p test-artifacts
+          pytest -q --maxfail=1 --disable-warnings 2>&1 | tee test-artifacts/pytest.log
+        continue-on-error: false
+
       - name: Validate handoff.yml (required keys)
         run: |
           python - <<'PY'
-          import sys, yaml
+          import sys, yaml, pathlib
+          p = pathlib.Path("handoff/handoff.yml")
+          if not p.exists():
+              print("handoff/handoff.yml not found; if intentional, skip or create a stub.")
+              sys.exit(1)
           req = {"owner","status","artifacts","outputs_expected","acceptance_criteria","next_action"}
-          data = yaml.safe_load(open("handoff/handoff.yml","r", encoding="utf-8"))
+          data = yaml.safe_load(p.read_text(encoding="utf-8"))
           if not isinstance(data, dict):
               print("handoff.yml must be a mapping"); sys.exit(1)
           missing = sorted(req - set(data))
@@ -43,3 +58,10 @@ jobs:
       - name: Schema smoke test (validator + minimal example)
         run: |
           python -m src.validate_canonical tests/samples/minimal_valid.json --verbose
+
+      - name: Upload test logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-artifacts
+          path: test-artifacts/
