--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,6 @@
 [tool.ruff]
 target-version = "py311"
 line-length = 100
-# Keep it sensible; extend later as the codebase grows.
-select = [
-  "E",   # pycodestyle errors
-  "F",   # pyflakes
-  "I",   # isort import order
-  "B",   # flake8-bugbear
-  "UP",  # pyupgrade
-]
-ignore = [
-  "E203",  # allow black’s slice spacing
-]
 exclude = [
   ".git",
   ".github",
@@ -27,22 +16,32 @@ exclude = [
 ]
 
 [tool.ruff.lint]
-# Temporary ignores so CI passes during scaffolding
-ignore = [
-  "E501",  # line too long
-  "UP006", # typing.Dict → dict
-  "UP035", # deprecated typing imports
-  "UP037", # quoted annotations
-  "UP045", # Optional[X] → X|None
-  "UP009", # unnecessary coding comment
-  "UP015", # unnecessary open() mode
+# Rules we actively enforce
+select = [
+  "E",   # pycodestyle errors
+  "F",   # pyflakes
+  "I",   # isort import order
+  "B",   # flake8-bugbear
+  "UP",  # pyupgrade
 ]
 
-[tool.ruff.isort]
+# Temporary ignores so CI passes during scaffolding
+ignore = [
+  "E203", # black slice spacing
+  "E501", # line too long
+  "UP006",# typing.Dict→dict
+  "UP035",# deprecated typing imports
+  "UP037",# quoted annotations
+  "UP045",# Optional[X]→X|None
+  "UP009",# unnecessary coding comment
+  "UP015",# unnecessary open() mode
+]
+
+[tool.ruff.lint.isort]
 known-first-party = ["aaf2resolve_spec", "src"]
 combine-as-imports = true
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # allow re-exports
 
 [tool.black]
