Revise handoff.yml for integration testing readiness

--- a/handoff/handoff.yml
+++ b/handoff/handoff.yml
@@ -1,6 +1,17 @@
+# @created_by: CL
+# @created_at: 2025-08-30T12:00:00Z
+# @revision: 2.002
+# @last_editor: CL
+# @draft_kind: edit
+# @spec_compliance: ["docs/collaboration_protocol.md"]
+# @handoff_ready: true
+# @integration_points: ["multi-agent coordination", "baton passing"]
+# @outputs: ["coordination state", "next_action directives"]
+# @notes: "Updated with completed FCPXML writer - ready for integration testing phase"
+
 version: 1.0
-owner: "GPT"
-status: "needs_implementation"
+owner: "GEMINI"
+status: "needs_testing"
 
 artifacts:
   - path: "src/build_canonical.py"
@@ -9,10 +20,46 @@ artifacts:
     handoff_notes: |
       COMPLETED: Full AAF → canonical JSON implementation with UMID chain resolution,
       complete OperationGroup capture, path fidelity, logging, event ID generation.
-      READY: For FCPXML writer implementation.
+      TESTED: Core structure validated.
 
-next_action: "GPT: Implement write_fcpxml_from_canonical() per docs/fcpxml_rules.md"
+  - path: "src/write_fcpxml.py"
+    revision: "2.001"
+    last_editor: "CL"
+    handoff_notes: |
+      COMPLETED: Full FCPXML 1.13 writer implementation per docs/fcpxml_rules.md.
+      - Frame-to-time conversion for NTSC rates
+      - Asset declaration and deduplication
+      - Conservative effect mapping
+      - Proper sequence/spine structure
+      NEEDS: Integration testing with canonical JSON samples.
+
+spec_compliance:
+  - "docs/fcpxml_rules.md - FCPXML 1.13 output specification"
+  - "docs/data_model_json.md - canonical JSON input contract"
+  - "docs/collaboration_protocol.md - file header metadata requirements"
+
+outputs_expected:
+  - "Integration tests: canonical JSON → FCPXML → validation"
+  - "End-to-end pipeline testing with test samples"
+  - "Round-trip validation reports"
+
+acceptance_criteria:
+  - "Pipeline works: AAF → canonical JSON → FCPXML"
+  - "FCPXML validates against Resolve import requirements"
+  - "All file headers include proper metadata per collaboration_protocol.md"
+  - "Test coverage for integration scenarios"
+
+next_action: |
+  GEMINI: Create integration tests for the complete pipeline:
+  
+  1. Test canonical JSON → FCPXML conversion with tests/samples/*.json
+  2. Validate FCPXML structure and Resolve compatibility
+  3. Create end-to-end pipeline test with mock AAF data
+  4. Generate validation reports in /reports/integration/
+  5. Ensure all files have proper header metadata per docs/collaboration_protocol.md
+  6. Update handoff → owner: "COPILOT", status: "needs_review" for final PR and architecture review
 
 metadata:
-  last_updated_by: "CL" 
-  notes: "Core parser complete. FCPXML writer needed for end-to-end pipeline."
+  last_updated_by: "CL"
+  last_updated_at: "2025-08-30T17:40:00Z"
+  notes: "Both core components complete. Ready for integration testing and final review phase."
