--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ __pycache__/
 src/__pycache__/
 src/__pycache__/validate_canonical.cpython-311.pyc
 __pycache__/
+# ADK monitoring artifacts
+adk/monitoring/agent_status.json
+adk/monitoring/pipeline_metrics.json
+adk/monitoring/gui_status.json
+adk/monitoring/memory.sqlite
+adk/monitoring/*.tmp
