feat(adk): SQLite-backed memory store + memory_cli list/read/write

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ adk/monitoring/gui_status.json
 adk/monitoring/memory.sqlite
 adk/monitoring/*.tmp
 adk/monitoring/memory.sqlite
+adk/monitoring/*.json
