--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,34 +49,7 @@ line-length = 100
 target-version = ["py311"]
 
 [tool.mypy]
-python_version = "3.11"
-strict = true
-ignore_missing_imports = true
-warn_unused_ignores = true
-warn_redundant_casts = true
-warn_return_any = true
-no_implicit_optional = true
-
-[[tool.mypy.overrides]]
-module = ["tests.*"]
-strict = false
-warn_unused_ignores = false
-
-[tool.pytest.ini_options]
-addopts = "-q --maxfail=1 --disable-warnings"
-testpaths = ["tests"]
-
-[tool.coverage.run]
-branch = true
-source = ["src"]
-
-[tool.coverage.report]
-skip_empty = true
-exclude_lines = [
-  "pragma: no cover",
-  "if __name__ == .__main__.:",
-]
-
-[[tool.mypy.overrides]]
-module = ["src.build_canonical", "src.tools.json_to_csv_views", "src.parse_aaf"]
 ignore_errors = true
+files = ["src", "tests"]
+ignore_missing_imports = true
+disallow_untyped_defs = false
