--- a/.github/workflows/reports.yml
+++ b/.github/workflows/reports.yml
@@ -26,6 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           # ensure core tools exist (ruff/mypy/pytest); ignore missing req files
           pip install ruff mypy pytest anyio
+          pip install pyaaf2
           # optional type stubs used by mypy config (harmless if unused)
           pip install --no-deps --ignore-installed types-requests types-PyYAML || true
           # project deps if present
