parser: deep traversal confirmed (71 OperationGroups, 603 animated params detected); guarded resolver path; source_id early-return removed but param attach still pending

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ adk/monitoring/pipeline_metrics.json
 src/build_canonical.backup.*.py
 src/build_canonical.py.backup
 src/*_fixed.py
+
+# local backups
+src/build_canonical.backup.*.py
+src/build_canonical.py.backup
+src/*_fixed.py
